# pure-prop

./: default.nix  pure-prop.cabal
src/Pure/Data/: Prop.hs
src/Pure/Data/Prop/: TH.hs
