name:                pure-prop
version:             0.7.0.0
synopsis:            Property class for building UI libraries.
homepage:            github.com/grumply/pure-prop
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Data.Prop

  build-depends:
      base >=4.8

  hs-source-dirs:      src
  default-language:    Haskell2010

