name:                pure-prop
version:             0.8.0.0
synopsis:            Property class for building UI libraries.
homepage:            purehs.org/doc/pure-prop
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-prop.git

library
  exposed-modules:
      Pure.Data.Prop
      Pure.Data.Prop.TH

  build-depends:
      base,
      pure-core,
      template-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

